# bufrlib

./: CMakeLists.txt  HISTORY  README.md  README_BUFRLIB  build.sh  getdefflags_C.sh  getdefflags_F.sh
cmake/: PackageConfig.cmake.in
src/: closbf.F  seqsdx.f  stseq.c
tools/: build.sh
